# aftershock

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README  README.md  UNLICENSE  assets.rs  asteroids  audio.rs  collision2.rs  color.rs  demo_record1  drawables.rs  lib.rs  math.rs  matricies.rs  polyrasterizer.rs  rasterizer.rs  vectors.rs
examples/: 3d_cube_wireframe.rs  3d_triangle.rs  UNFINISHED_asteroids.rs  asteroids.rs  linux_framebuffer_template.rs  minifb.rs  minifb_template.rs  sdl2.rs  sdl2_template.rs
examples/asteroids/: asteroids.rs  asteroids_engine.rs  asteroids_sdl2.rs  main.rs
examples/benchmark/: main.rs
examples/framework/: api_audio.rs  api_color.rs  api_display.rs  api_drawing.rs  api_font.rs  api_image.rs  api_input.rs  api_profiling.rs  api_shareables.rs  controls.rs  engine.rs  lua.rs  main.rs
examples/framework/examples/: procedural.lua
examples/layers/: main.rs
examples/platformer/: aabb.rs  controls.rs  engine.rs  gamestate.rs  level.rs  main.rs  wall.rs
examples/raycaster/: controls.rs  engine.rs  level.rs  main.rs  raycaster.rs  renderer.rs
examples/three_dee/: controls.rs  engine.rs  main.rs
src/: assets.rs  buffer.rs  color.rs  drawables.rs  font.rs  framebuffer.rs  gui.rs  image.rs  lib.rs  line.rs  math.rs  matricies.rs  matrix3.rs  matrix4.rs  partitioned_buffer.rs  partitioned_rasterizer.rs  polygon.rs  quaternion.rs  random.rs  rasterizer.rs  rasterizer_threaded.rs  shader.rs  three.rs  three_dee.rs  vector2.rs  vector3.rs  vectors.rs
