[package]
name    = "aftershock"
version = "0.0.18"
authors = ["Keinan Powers / Phobos001"]
edition = "2021"
catagories = "graphics"
keywords = ["graphics", "rendering", "software-rendering", "gamedev"]
description = "Software Rendering Graphics API written in pure rust"
license = "MIT"
repository = "https://github.com/Phobos001/aftershock"
readme = "README.md"

[lib]
name = "aftershock"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
lodepng = "3.7.2" # load pngs for Image to Vec<u8>
rgb = "0.8.34" # helps the above
rusttype = "0.9.3" # TTF Rendering into Image
num_cpus = "1.15.0"
rayon = "1.6.1"

[dev-dependencies]
sdl2 = "0.35.2"
minifb = "0.23.0"
device_query = "1.1.2"
alea = "0.2.2" # Used in asteroids example

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

