[package]
name    = "aftershock"
version = "0.0.18"
authors = ["Keinan Powers / Phobos001"]
edition = "2021"
catagories = "graphics"
keywords = ["graphics", "rendering", "software-rendering", "gamedev"]
description = "Software Rendering Graphics API written in pure rust"
license = "MIT"
repository = "https://github.com/Phobos001/aftershock"
readme = "README.md"

[lib]
name = "aftershock"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
lodepng = "3.7.2" # load pngs for Image to Vec<u8>
rgb = "0.8.34" # helps the above
rusttype = "0.9.3" # TTF Rendering into Image
num_cpus = "1.15.0"
rayon = "1.6.1"

[dev-dependencies]
sdl2 = {version = "0.35.2", features = ["static-link", "use-pkgconfig"] }
device_query = "1.1.2"
alea = "0.2.2"
soloud = "1.0.2"
dashmap = {version = "5.4.0", features = ["serde", "rayon"]}

[profile.dev]
opt-level = 3


[profile.release]
lto = true
codegen-units = 1
opt-level = 3


[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }